welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:2: error: not found: value data
  if (you>=8 && data>=2){
                ^dateFashion:4: error: not found: value data
  } else if (you>=2 && data>=8){
                       ^dateFashion:5: error: type mismatch;
 found   : Boolean(true)
 required: Int
    return true
           ^dateFashion:8: error: type mismatch;
 found   : Boolean(false)
 required: Int
    return false
           ^