welcome.lessons.welcome.bat.bool2.DateFashion.scala.code
def dateFashion(you:Int, date:Int):Int = {
  if (you>=8 && data>=2){
    return 2
  } else if (you>=2 && data>=8){
    return true
    
  } else {
    return false
  }
}